--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^6.2.0",
     "log-update": "^2.3.0",
     "moment": "^2.23.0",
+    "node-cron": "^2.0.3",
     "node-rest-client": "^3.1.0"
   }
 }
